--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -45,6 +45,12 @@ body
     position: relative
     display: inline-block
 
+  @extend .borded
+  background: $secondary-background-color
+  width: 100%
+  height: 150px
+
+
 .track
   @extend .centered-element
   width: $centered-width
