--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -5,8 +5,6 @@
   %h6 Music that gets you in the zone.
 
 
-
-
 = form_tag '', method: :post, class: 'search-songs' do
   = text_field_tag :search_term, '', placeholder: 'Search songs', id: 'user-input'
   = submit_tag "GO"
@@ -30,3 +28,7 @@
   .card
     %h4 Name
     %h3 Song Title
+
+/ = form_tag '', method: :post, class: 'search-songs' do
+/   = text_field_tag :search_term, '', placeholder: 'Search songs', id: 'user-input'
+/   = submit_tag "GO"
