--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -15,10 +15,35 @@ body
   width: $centered-width
 
 .player
-  @extend .borded
+  @extend .borded, .padding-40
   background: $secondary-background-color
   width: 100%
-  height: 150px
+
+  .control-button
+    @extend .padding-20
+    width: 40px
+    height: 40px
+    background: $darker-blue
+    border-radius: 50%
+
+.pause
+  @extend .centered-element
+  width: 14px
+  height: 30px
+
+  .left-pause
+    width: 5px
+    height: 30px
+    background: #fff
+    position: relative
+    display: inline-block
+
+  .right-pause
+    width: 5px
+    height: 30px
+    background: #fff
+    position: relative
+    display: inline-block
 
 .track
   @extend .centered-element
