--- a/app/assets/stylesheets/utilities.sass
+++ b/app/assets/stylesheets/utilities.sass
@@ -7,6 +7,9 @@
 .padding-30
   padding: 30px
 
+.padding-40
+  padding: 40px
+
 .borded
   border-top: 1px solid black
   border-bottom: 1px solid black
