--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -45,10 +45,31 @@ body
     position: relative
     display: inline-block
 
-  @extend .borded
-  background: $secondary-background-color
-  width: 100%
-  height: 150px
+  .control-button
+    @extend .padding-20
+    width: 40px
+    height: 40px
+    background: $darker-blue
+    border-radius: 50%
+
+.pause
+  @extend .centered-element
+  width: 14px
+  height: 30px
+
+  .left-pause
+    width: 5px
+    height: 30px
+    background: #fff
+    position: relative
+    display: inline-block
+
+  .right-pause
+    width: 5px
+    height: 30px
+    background: #fff
+    position: relative
+    display: inline-block
 
 
 .track
