--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -5,7 +5,10 @@
   %h6 Music that gets you in the zone.
 
 .player
-  .current-song
+  .control-button
+    .pause
+      .left-pause
+      .right-pause
 
 .menu
 
