Style media player play/pause button. [Home page styling #5]

--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -4,7 +4,10 @@
       </FLOWLIST>
   %h6 Music that gets you in the zone.
 .player
-  .current-song
+  .control-button
+    .pause
+      .left-pause
+      .right-pause
 
 .menu
 
