--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -6,44 +6,168 @@ body
   color: $main-font-color
   font-family: "AvenirNext", demibold
 
-.logo
-  color: $darker-blue
-  font-family: "AvenirNext", demibold
-
 .header
   @extend .centered-element, .padding-20
   width: $centered-width
 
-.player
-  @extend .borded, .padding-40
-  background: $secondary-background-color
-  width: 100%
+.logo
+  color: $darker-blue
+  font-family: "AvenirNext", demibold
+  width: 192px
 
-  .control-button
-    @extend .padding-20
+  h6
+    width: 230px
+
+.player-column
+  float: left
+  padding: 17px
+
+.user-photo
+
+  img
     width: 40px
     height: 40px
-    background: $darker-blue
+    border-radius: 50%
+    position: absolute
+    top: 20px
+    right: 363px
+
+.add-song-button
+  width: 40px
+  height: 40px
+  border-radius: 50%
+  background: $darker-blue
+  position: absolute
+  top: 20px
+  right: 283px
+
+.rec-one
+  width: 15px
+  height: 3px
+  background: #fff
+  position: absolute
+  left: 12.5px
+  top: 18.5px
+
+.rec-two
+  width: 3px
+  height: 15px
+  background: #fff
+  position: absolute
+  left: 18.5px
+  top: 12.5px
+
+#player
+  @extend .borded, .padding-20
+  background: $secondary-background-color
+  padding-left: 225px
+  padding-right: 225px
+
+#left
+  height: 126px
+  width: 76px
+
+.controls
+  @extend .padding-20
+  width: 30px
+  height: 30px
+  background: $darker-blue
+  border-radius: 50%
+  margin-bottom: 15px
+
+#pause > div
+  display: inline-block
+
+#pause
+  @extend .centered-element
+  text-align: center
+
+  div
+    width: 5px
+    height: 30px
+    background: #fff
+
+  div
+    width: 5px
+    height: 30px
+    background: #fff
+
+#skip
+  width: 100%
+  text-align: center
+
+  img
+    @extend .centered-element
+    length: 20px
+    width: 20px
+    display: inline-block
+    margin: 0 7px 0 7px
+
+.song-info
+
+  .title-desc
+    display: inline-block
+    width: 680px
+
+    h4
+      font-style: $regular-font
+      margin-bottom: 10px
+
+    h3
+      font-size: 20px
+      margin-bottom: 36px
+
+  .upvotes
+    display: inline-block
+
+    img
+      width: 39px
+      length: 25px
+
+    h1
+      font-size: 20px
+      margin-top: 4px
+
+#progress-bar
+  height: 7px
+  width: 603px
+  background: $background-color
+  border-radius: 20px
+  display: inline-block
+
+.replay-icon
+  width: 22px
+  height: 20px
+
+.user-info
+  @extend .centered-element
+  clear: both
+  width: 33%
+
+  img
+    width: 40px
+    height: 40px
     border-radius: 50%
 
-.pause
-  @extend .centered-element
-  width: 14px
-  height: 30px
+.text
+  display: inline-block
 
-  .left-pause
-    width: 5px
-    height: 30px
-    background: #fff
-    position: relative
-    display: inline-block
+  span
+    color: $darker-blue
 
-  .right-pause
-    width: 5px
-    height: 30px
-    background: #fff
+
+.icon
+  width: 40px
+  height: 40px
+  background: $background-color
+  border-radius: 50%
+
+  img
     position: relative
-    display: inline-block
+    left: 10px
+    top: 9px
+    width: 50%
+    height: 50%
 
 .track
   @extend .centered-element
