--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -3,12 +3,52 @@
     :escaped
       </FLOWLIST>
   %h6 Music that gets you in the zone.
+  .user-photo
+    = image_tag 'user_avatar.png'
+  .add-song-button
+    .rec-one
+    .rec-two
 
-.player
-  .control-button
-    .pause
-      .left-pause
-      .right-pause
+#player
+
+  #left.player-column
+    .controls
+      #pause
+        %div
+        %div
+    #skip
+      = image_tag 'backward.svg'
+      = image_tag 'forward.svg'
+
+  #middle.player-column
+    .song-info
+      .title-desc
+        %h4 Kayne West
+        %h3 I am a God you could unlike em
+      .upvotes
+        = image_tag 'upvote_icon.svg'
+        %h1 267
+    %div
+      %span 33:44
+      %span#progress-bar
+      %span 1:34:34
+      = image_tag 'replay_icon.svg', class: 'replay-icon'
+
+  #right.player-column
+    .share.icon
+      = image_tag 'share_icon.svg'
+    .like.icon
+      = image_tag 'like_icon.svg'
+    .chat.icon
+      = image_tag 'chat_icon.svg'
+
+  .user-info
+    = image_tag 'user_avatar.png'
+    .text
+      via
+      %span Igor Yuzo
+      working on
+      %span FlowList
 
 .menu
 
