--- a/app/assets/stylesheets/utilities.sass
+++ b/app/assets/stylesheets/utilities.sass
@@ -13,3 +13,8 @@
 .borded
   border-top: 1px solid black
   border-bottom: 1px solid black
+
+.icon-background
+  width: 40px
+  height: 40px
+  border-radius: 50%
