--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -5,46 +5,46 @@
   %h6 Music that gets you in the zone.
   .user-photo
     = image_tag 'user_avatar.png'
-  .add-song-button
-    .rec-one
-    .rec-two
+  .add-song-icon
+    .horizontal-rectangle
+    .vertical-rectangle
 
-#player
+.player
 
-  #left.player-column
-    .controls
-      #pause
+  .left-player.player-column
+    .pause-controls
+      .pause-player
         %div
         %div
-    #skip
+    .song-skip-controls
       = image_tag 'backward.svg'
       = image_tag 'forward.svg'
 
-  #middle.player-column
+  .middle-player.player-column
     .song-info
       .title-desc
         %h4 Kayne West
         %h3 I am a God you could unlike em
-      .upvotes
+      .song-upvotes
         = image_tag 'upvote_icon.svg'
         %h1 267
     %div
       %span 33:44
-      %span#progress-bar
+      %span.song-progress-bar
       %span 1:34:34
       = image_tag 'replay_icon.svg', class: 'replay-icon'
 
-  #right.player-column
-    .share.icon
+  .right-player.player-column
+    .share-icon.icon-background
       = image_tag 'share_icon.svg'
-    .like.icon
+    .like-icon.icon-background
       = image_tag 'like_icon.svg'
-    .chat.icon
+    .chat-icon.icon-background
       = image_tag 'chat_icon.svg'
 
   .user-info
     = image_tag 'user_avatar.png'
-    .text
+    .user-status
       via
       %span Igor Yuzo
       working on
