Create skeleton and style mp3 player and nav-bar.[References #86369936]

--- a/app/assets/stylesheets/utilities.sass
+++ b/app/assets/stylesheets/utilities.sass
@@ -7,6 +7,15 @@
 .padding-30
   padding: 30px
 
+.padding-40
+  padding: 40px
+
 .borded
   border-top: 1px solid black
   border-bottom: 1px solid black
+
+.icon-background
+  width: 40px
+  height: 40px
+  border-radius: 50%
+
