Results overlay in the works.

--- a/app/assets/stylesheets/variables.sass
+++ b/app/assets/stylesheets/variables.sass
@@ -1,5 +1,6 @@
 $background-color: #2E2F3B
 $secondary-background-color: #3B3B48
+$overlay-background-color: rgba(46, 47, 59, 0.97)
 
 $darker-blue: #3981E7
 $lighter-blue: #347EEA
