--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -1,201 +1,15 @@
+@import reset
+@import external
+
 @import variables
 @import utilities
+
+@import header
+@import player
+@import track
+@import overlay
 
 body
   background: $background-color
   color: $main-font-color
-  font-family: "AvenirNext", demibold
-
-// Nav-bar
-.header
-  @extend .centered-element, .padding-20
-  width: $centered-width
-
-.logo
-  color: $darker-blue
-  font-family: "AvenirNext", demibold
-  width: 192px
-
-  h6
-    width: 230px
-
-.user-photo
-
-  img
-    width: 40px
-    height: 40px
-    border-radius: 50%
-    position: absolute
-    top: 20px
-    right: 363px
-
-.add-song-icon
-  width: 40px
-  height: 40px
-  border-radius: 50%
-  background: $darker-blue
-  position: absolute
-  top: 20px
-  right: 283px
-
-.horizontal-rectangle
-  width: 15px
-  height: 3px
-  background: #fff
-  position: absolute
-  left: 12.5px
-  top: 18.5px
-
-.vertical-rectangle
-  width: 3px
-  height: 15px
-  background: #fff
-  position: absolute
-  left: 18.5px
-  top: 12.5px
-
-// Music player
-.player
-  @extend .borded, .padding-20
-  background: $secondary-background-color
-  padding-left: 225px
-  padding-right: 225px
-
-.player-column
-  float: left
-  padding: 17px
-
-.left-player
-  height: 126px
-  width: 76px
-
-.pause-controls
-  @extend .padding-20
-  width: 30px
-  height: 30px
-  background: $darker-blue
-  border-radius: 50%
-  margin-bottom: 15px
-
-.pause-player > div
-  display: inline-block
-
-.pause-player
-  @extend .centered-element
-  text-align: center
-
-  div
-    width: 5px
-    height: 30px
-    background: #fff
-
-  div
-    width: 5px
-    height: 30px
-    background: #fff
-
-.song-skip-controls
-  width: 100%
-  text-align: center
-
-  img
-    @extend .centered-element
-    length: 20px
-    width: 20px
-    display: inline-block
-    margin: 0 7px 0 7px
-
-.song-info
-
-  .title-desc
-    display: inline-block
-    width: 680px
-
-    h4
-      font-style: $regular-font
-      margin-bottom: 10px
-
-    h3
-      font-size: 20px
-      margin-bottom: 36px
-
-  .song-upvotes
-    display: inline-block
-
-    img
-      width: 39px
-      length: 25px
-
-    h1
-      font-size: 20px
-      margin-top: 4px
-
-.song-progress-bar
-  height: 7px
-  width: 603px
-  background: $background-color
-  border-radius: 20px
-  display: inline-block
-
-.replay-icon
-  width: 22px
-  height: 20px
-
-.user-info
-  @extend .centered-element
-  clear: both
-  width: 33%
-
-  img
-    width: 40px
-    height: 40px
-    border-radius: 50%
-
-.user-status
-  display: inline-block
-
-  span
-    color: $darker-blue
-
-.icon-background
-  @extend .icon-background
-  background: $background-color
-
-  img
-    position: relative
-    left: 10px
-    top: 9px
-    width: 50%
-    height: 50%
-
-.track
-  @extend .centered-element
-  width: $centered-width
-  // background: white
-  padding: 10px 10px 0 10px
-
-.widget
-  display: inline-block
-  background: red
-  width: 100px
-  height: 100px
-
-.card
-  @extend .padding-20
-  display: inline-block
-  background: $secondary-background-color
-  position: relative
-  float: right
-  height: 60px
-  width: 800px
-
-
-
-
-
-
-
-
-
-
-
+  font-family: "AvenirNext", regular
