--- a/app/assets/stylesheets/external.css.scss
+++ b/app/assets/stylesheets/external.css.scss
@@ -1,11 +1,11 @@
 @font-face {
   font-family:'AvenirNext-UltraLight';
-  src: url('AvenirNext-UltraLight_gdi.eot');
-  src: url('AvenirNext-UltraLight_gdi.eot?#iefix') format('embedded-opentype'),
-    url('AvenirNext-UltraLight_gdi.woff') format('woff'),
-    url('AvenirNext-UltraLight_gdi.ttf') format('truetype'),
-    url('AvenirNext-UltraLight_gdi.otf') format('opentype'),
-    url('AvenirNext-UltraLight_gdi.svg#AvenirNext-UltraLight') format('svg');
+  src: font-url('AvenirNext-UltraLight_gdi.eot');
+  src: font-url('AvenirNext-UltraLight_gdi.eot?#iefix') format('embedded-opentype'),
+    font-url('AvenirNext-UltraLight_gdi.woff') format('woff'),
+    font-url('AvenirNext-UltraLight_gdi.ttf') format('truetype'),
+    font-url('AvenirNext-UltraLight_gdi.otf') format('opentype'),
+    font-url('AvenirNext-UltraLight_gdi.svg#AvenirNext-UltraLight') format('svg');
   font-weight: 275;
   font-style: normal;
   font-stretch: normal;
@@ -14,12 +14,12 @@
 
 @font-face {
   font-family:'AvenirNext-Regular';
-  src: url('AvenirNext-Regular_gdi.eot');
-  src: url('AvenirNext-Regular_gdi.eot?#iefix') format('embedded-opentype'),
-    url('AvenirNext-Regular_gdi.woff') format('woff'),
-    url('AvenirNext-Regular_gdi.ttf') format('truetype'),
-    url('AvenirNext-Regular_gdi.otf') format('opentype'),
-    url('AvenirNext-Regular_gdi.svg#AvenirNext-Regular') format('svg');
+  src: font-url('AvenirNext-Regular_gdi.eot');
+  src: font-url('AvenirNext-Regular_gdi.eot?#iefix') format('embedded-opentype'),
+    font-url('AvenirNext-Regular_gdi.woff') format('woff'),
+    font-url('AvenirNext-Regular_gdi.ttf') format('truetype'),
+    font-url('AvenirNext-Regular_gdi.otf') format('opentype'),
+    font-url('AvenirNext-Regular_gdi.svg#AvenirNext-Regular') format('svg');
   font-weight: 400;
   font-style: normal;
   font-stretch: normal;
@@ -28,12 +28,12 @@
 
 @font-face {
   font-family:'AvenirNext-Medium';
-  src: url('AvenirNext-Medium_gdi.eot');
-  src: url('AvenirNext-Medium_gdi.eot?#iefix') format('embedded-opentype'),
-    url('AvenirNext-Medium_gdi.woff') format('woff'),
-    url('AvenirNext-Medium_gdi.ttf') format('truetype'),
-    url('AvenirNext-Medium_gdi.otf') format('opentype'),
-    url('AvenirNext-Medium_gdi.svg#AvenirNext-Medium') format('svg');
+  src: font-url('AvenirNext-Medium_gdi.eot');
+  src: font-url('AvenirNext-Medium_gdi.eot?#iefix') format('embedded-opentype'),
+    font-url('AvenirNext-Medium_gdi.woff') format('woff'),
+    font-url('AvenirNext-Medium_gdi.ttf') format('truetype'),
+    font-url('AvenirNext-Medium_gdi.otf') format('opentype'),
+    font-url('AvenirNext-Medium_gdi.svg#AvenirNext-Medium') format('svg');
   font-weight: 500;
   font-style: normal;
   font-stretch: normal;
@@ -42,12 +42,12 @@
 
 @font-face {
   font-family:'AvenirNext-DemiBold';
-  src: url('AvenirNext-DemiBold_gdi.eot');
-  src: url('AvenirNext-DemiBold_gdi.eot?#iefix') format('embedded-opentype'),
-    url('AvenirNext-DemiBold_gdi.woff') format('woff'),
-    url('AvenirNext-DemiBold_gdi.ttf') format('truetype'),
-    url('AvenirNext-DemiBold_gdi.otf') format('opentype'),
-    url('AvenirNext-DemiBold_gdi.svg#AvenirNext-DemiBold') format('svg');
+  src: font-url('AvenirNext-DemiBold_gdi.eot');
+  src: font-url('AvenirNext-DemiBold_gdi.eot?#iefix') format('embedded-opentype'),
+    font-url('AvenirNext-DemiBold_gdi.woff') format('woff'),
+    font-url('AvenirNext-DemiBold_gdi.ttf') format('truetype'),
+    font-url('AvenirNext-DemiBold_gdi.otf') format('opentype'),
+    font-url('AvenirNext-DemiBold_gdi.svg#AvenirNext-DemiBold') format('svg');
   font-weight: 600;
   font-style: normal;
   font-stretch: normal;
